# like-clockwork

./: package.json
.github/workflows/: main.yaml
app/: README.md  cspell.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
server/src/: main.rs
web/: docker-compose.yaml  index.html
web/client/: .eslintrc.js  cspell.json  package-lock.json  package.json
web/client/scripts/: deploy.mjs
web/client/src/components/: home.tsx
web/client/src/layouts/: Layout.astro
web/client/src/lib/: drawScene.ts  shaders.ts
web/client/src/lib/webGL/: webGLUtils.ts
web/client/src/pages/: index.astro
web/db/: package.json
web/db/prisma/: schema.prisma
web/db/prisma/migrations/20231007184843_add_email/: migration.sql
web/discord-scraper/: .gitignore  Dockerfile  index.ts  package-lock.json  package.json
web/discord-scraper/src/: api.ts  media.ts  scraper.ts  server.ts  storage.ts  types.ts
web/discord-scraper/viewer/: index.html  package-lock.json  package.json  vite.config.ts
web/discord-scraper/viewer/src/: App.tsx  Message.tsx  MessageFeed.tsx  Sidebar.tsx  api.ts  index.css  types.ts  utils.ts
web/nginx/: nginx.conf
web/server/: .cspell.json  .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json
web/server/configuration/: base.yaml  production.yaml
web/server/prisma/: schema.prisma  seed.ts
web/server/prisma/migrations/20231005152725_create_user/: migration.sql
web/server/prisma/migrations/20240102171012_init/: migration.sql
web/server/prisma/migrations/20240102171154_add_email/: migration.sql
web/server/scripts/: init_db.sh
web/server/src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs
web/server/src/routes/: hello.rs  mod.rs
web/server/src/routes/user/: get.rs
web/server/tests/: health_check.rs
web/server2/: package.json  readme.excalidraw
web/server2/src/: index.ts
web/server2/src/db/: schema.ts
web/server2/src/routes/: auth.ts
web/static/: addon-1.js  addon-2.js
