[package]
name = "clockwork-server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
anyhow = "1.0.76"

[lib]
path = "src/lib.rs"

[dev-dependencies]
reqwest = "0.11"
